--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
     <div class="main-content">
         {{>header}}
 
-    <img class="portrait" src="./img/robot.png">
+        <p>This site was created by Noel Velasco. It uses data from Mapbox and WeatherStack.</p>
+        <img class="portrait" src="./img/robot.png">
     </div>
 
     {{>footer}}
